add word to work dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "linkedin",
         "noopener",
         "noreferrer",
-        "rosero"
+        "postgress",
+        "postgress sql",
+        "rosero",
+        "sql"
     ]
 }
