fix mispelling of some of the words saved

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,8 @@
         "linkedin",
         "noopener",
         "noreferrer",
-        "postgress",
-        "postgress sql",
+        "postgres",
+        "postgres sql",
         "rosero",
         "sql"
     ]
