add word to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "linkedin",
         "noopener",
         "noreferrer",
+        "paulrosero",
         "postgres",
         "postgres sql",
         "rosero",
